--- a/index.html
+++ b/index.html
@@ -4,60 +4,74 @@
         <meta charset="UTF-8"> <!-- Suporte a caracteres -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio DevSaul</title>
+        <title>COMUNICAUT</title>
+
+        <!-- Estilos -->
+        <link rel="stylesheet" href="css/components/reset.css">
+        <link rel="stylesheet" href="css/components/main_header.css">
+        <link rel="stylesheet" href="css/components/main_action.css">
+        <link rel="stylesheet" href="css/components/main_section.css">
+        <link rel="stylesheet" href="css/home/wrapper_theme.css">
+        <link rel="stylesheet" href="css/home/figure_card.css">
+        <link rel="stylesheet" href="css/components/main_footer.css">
+
     </head>
 
     <body>
-        <header>
-            <nav>
-                <a class="" href="index.html"> Home </a>
-                <a class="" href="galeria.html"> Galeria de Criação </a>
+        <header class="main_header">
+            <nav id="menu" class="menu">
+                <a class="main_action" href="index.html"> Home </a>
+                <a class="main_action" href="galeria.html"> Galeria de Criação </a>
             </nav>
 
         </header>
 
-        <section>
-            <div>
-                <a>
+        <section class="main_section">
+            <div class="wrapper_theme">
+                <a href="pessoas.html">
                     <figure class="figure_card">
-                        <img class="icon" src="" alt="Figura de uma menino">
-                        <figcaption >Menino</figcaption> 
+                        <img class="icon" src="assets/img/teste.png" alt="Figura de duas pessoas">
+                        <figcaption >PESSOAS</figcaption> 
                     </figure>
                 </a>
                 <a>
                     <figure class="figure_card">
-                        <img class="icon" src="" alt="Figura de uma menina">
-                        <figcaption >Menina</figcaption> 
+                        <img class="icon" src="assets/img/Alimento.png" alt="Figura de uma cesta de alimentos">
+                        <figcaption >ALIMENTOS</figcaption> 
                     </figure>
                 </a>
                 <a>
                     <figure class="figure_card">
-                        <img class="icon" src="" alt="Figura de uma senhora de idade">
-                        <figcaption >Vovó</figcaption> 
+                        <img class="icon" src="assets/img/objetos.png" alt="Figura de uma caixa com objetos">
+                        <figcaption >OBJETOS</figcaption> 
                     </figure>
                 </a>
                 <a>
                     <figure class="figure_card">
-                        <img class="icon" src="" alt="Figura de um senhor de idade">
-                        <figcaption >Vovô</figcaption> 
+                        <img class="icon" src="assets/img/ações.png" alt="Figura de uma mão pegando uma caixa">
+                        <figcaption >AÇÕES</figcaption> 
                     </figure>
                 </a>
                 <a>
                     <figure class="figure_card">
-                        <img class="icon" src="" alt="Figura de uma mulher">
-                        <figcaption >Mamãe</figcaption> 
+                        <img class="icon" src="assets/img/emoções.png" alt="Figura de emojis">
+                        <figcaption >EMOÇÕES</figcaption> 
                     </figure>
                 </a>
                 <a>
                     <figure class="figure_card">
-                        <img class="icon" src="" alt="Figura de um homem">
-                        <figcaption >Papai</figcaption> 
+                        <img class="icon" src="assets/img/lugares.png" alt="Figura de uma praça">
+                        <figcaption >LUGARES</figcaption> 
                     </figure>
                 </a>
 
             </div>
 
         </section>
+
+        <footer class="main_footer">
+            <p>&copy2023 DevSaul DevAlmeida</p>
+        </footer>
 
 
 
